// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Route /> should render component 1`] = `
<Router
  history={null}
>
  <Route
    component={[Function]}
    path="/myroute/:id"
  >
    <component>
      <div />
    </component>
  </Route>
</Router>
`;

exports[`<Route /> should support children 1`] = `
<Router
  history={null}
>
  <Route
    path="/myroute/:id"
  >
    <div>
      Hello World.
    </div>
  </Route>
</Router>
`;

exports[`<Route /> should support exact prop 1`] = `
<Router
  history={null}
>
  <Route
    path="/"
  />
  <Route
    exact={true}
    path="/myroute/:id"
  />
  <Route
    path="/myroute/:id/okay"
  >
    <div>
      Hello Again.
    </div>
  </Route>
</Router>
`;

exports[`<Route /> should support nested Routes 1`] = `
<Router
  history={null}
>
  <Route
    path="/"
  >
    <div>
      Hello App.
    </div>
  </Route>
  <Route
    path="/myroute/:id"
  />
</Router>
`;

exports[`<Route /> should support nested Routes 2`] = `
<Router
  history={null}
>
  <Route
    path="/"
  />
  <Route
    path="/myroute/:id"
  >
    <div>
      Hello World.
    </div>
    <Route
      path="/okay"
    >
      <div>
        Hello Again.
      </div>
    </Route>
  </Route>
</Router>
`;
